<resources>
    <string name="app_name" translatable="false">Surprix</string>
    <string name="facebook_app_id" translatable="false">1965236533694397</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1965236533694397</string>
    <string name="facebook_client_token" translatable="false">40305460d16581265359476b878dccee</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change password</string>
    <string name="nobody_have_what_you_miss">Unfortunately, nobody have what you are looking for</string>
    <string name="username" translatable="false">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="login" translatable="false">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_yout_password">Have you forgot the password?</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="country">Country</string>
    <string name="name">Name</string>
    <string name="product">Product</string>
    <string name="send_email">Send e-mail</string>
    <string name="missings">Missing list</string>
    <string name="doubles">Doubles</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="data_sync_error">Data synchronization error</string>
    <string name="added_to_missings">Added to missing list</string>
    <string name="wrong_email_or_password">Wrong e-mail or password</string>
    <string name="mail_successfully_sent">E-mail successfully sent</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="password_changed">Password successfully changed</string>
    <string name="old_password_wrong">Old password incorrect</string>
    <string name="signup_complete_all_fields">Complete all fields before submit registration</string>
    <string name="signup_password_lenght">Password must be a minimum of 6 characters</string>
    <string name="delete_account">Delete account</string>
    <string name="dialog_add_set_title">Add set surprises</string>
    <string name="dialog_add_set_text">Do you want to add to the missing list all surprises from the set</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_add_year_title">Add year</string>
    <string name="dialog_add_year_text">Do you want to add to the missing list the complete year</string>
    <string name="dialod_delete_user_text">Do you want to delete you user account finally?</string>
    <string name="username_existing">Username already exists</string>
    <string name="list_is_empty">List is empty. You can add items from the catalog!</string>
    <string name="back">Back</string>
    <string name="set_image">set image</string>
    <string name="mail_subject" translatable="false">Surprix - %1$s</string>
    <string name="mailto_surprix" translatable="false">mailto:info.surprix@gmail.com</string>
    <string name="network_unavailable">Network connection not available. Please retry later</string>
    <string name="signup_email_format">Please check the e-mail format</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_text"><![CDATA[<p>This privacy policy has been compiled to inform users about which personal data are collected in Surprix. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information.</p>
        <div><strong>What personal information do we collect from the people that register to Surprix?</strong></div>
        <div>When registering on our app, as appropriate, you may be asked to enter your email address and your country.</div>
        <div><strong>When do we collect information?</strong></div>
        <div>We collect information from you when you register on our app or enter information on our app.</div>
        <div>
        <div><strong>How do we use your information?</strong></div>
        <div>We use your email address to&nbsp;authenticate you inside the app. The using of the email is necessary for password recovery and to be contacted by other users for making exchanges.</div>
        <div>We ask your country to improve your experience on the app, like showing you, when necessary, users of your country at first.</div>
        <div><strong>How do we protect your information?</strong></div>
        <div>We implement a variety of security measures when a user enters, submits, or accesses their information to maintain the safety of your personal information.</div>
        <div>To do so, all the Authentication is handled by Google Firebase Authentication, which stores, protect and provide services for password recovery and data deletion.</div>
        <div>Other information, are maintained behind secured networks and is only accessible by a limited number of persons who have special access rights to such systems and are required to keep the information confidential.</div>
        <div><strong>Do we use \'cookies\'?</strong></div>
        <div>We do not use cookies for tracking purposes</div>
        <div><strong>Third-party disclosure</strong></div>
        <div>We do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information.</div>
        <div><strong>Third-party links</strong></div>
        <div>We do not include or offer third-party products or services on our app.</div>
        <div><strong>Fair Information Practices</strong></div>
        <div>The Fair Information Practices Principles form the backbone of privacy law in the United States and the concepts they include have played a significant role in the development of data protection laws around the globe. Understanding the Fair Information Practice Principles and how they should be implemented is critical to comply with the various privacy laws that protect personal information.<br /><strong>In order to be in line with Fair Information Practices we will take the following responsive action, should a data breach occur:</strong></div>
        <div>We will notify you via email within 1 business day</div>
        <div><br />We also agree to the Individual Redress Principle which requires that individuals have the right to legally pursue enforceable rights against data collectors and processors who fail to adhere to the law. This principle requires not only that individuals have enforceable rights against data users, but also that individuals have recourse to courts or government agencies to investigate and/or prosecute non-compliance by data processors.</div>
        </div>
        <div>
        <div><strong>Contacting Us</strong></div>
        <div>If there are any questions regarding this privacy policy, you may contact us using the email below:</div>
        <div><em>info.surprix@gmail.com</em></div>
        </div>]]>
    </string>
    <string name="terms_agree">I agree with terms</string>
    <string name="difficulty">Rarity:</string>
    <string name="default_notification_channel_id" translatable="false">surprix_default</string>
    <string name="default_notification_channel_name" translatable="false">SurprixDefault</string>
    <string name="title_missing_list">Missing list</string>
    <string name="title_double_list">Double list</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_about_me">About me</string>
    <string name="title_my_collection">My Collection</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="missing_removed">Missing surprise removed</string>
    <string name="surprises">Surprises</string>
    <string name="sets">Sets</string>
    <string name="search_title">Search</string>
    <string name="email_app_chooser">Select the e-mail app</string>
    <string name="signup_mail_existinig">The e-mail is just present in our database. Maybe you have already signed up?</string>
    <string name="signup_weak_password">The password you entered is too weak.</string>
    <string name="signup_default_error">Something went wrong... please try again!</string>
    <string name="username_delete_success">Username successfully deleted</string>
    <string name="cannot_send_recovery_email">Cannot send the password recovery e-mail</string>
    <string name="settings_night_mode_key" translatable="false">night_mode</string>
    <string name="settings_privacy_key" translatable="false">privacy_policy</string>
    <string name="settings_contact_us_key" translatable="false">contact_us</string>
    <string name="settings_contact_us_summary">Contact us for suggest any changes or ask for the insertion of a particular set. Write an e-mail even if you would like to collaborate to Surprix growth.</string>
    <string name="settings_contact_us_title">Contact us</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_category_theme">Theme</string>
    <string name="settings_category_links" translatable="false">Links</string>
    <string name="settings_night_mode_title">Night mode</string>
    <string name="settings_delete_user_key" translatable="false">settings_delete_user</string>
    <string name="settings_delete_user_summary">This action will delete the account from our database.</string>
    <string name="settings_change_password_key" translatable="false">settings_change_password</string>
    <string name="password_cannot_be_null">Password cannot be null</string>
    <string name="settings_change_country_key" translatable="false">settings_change_country</string>
    <string name="change_country">Change country</string>
    <string name="logout">Logout</string>
    <string name="double_removed">Double surprise removed</string>
    <string name="find">Find</string>
    <string name="find_surprise">Find surprise</string>
    <string name="other_for_you_title">Other surprises from %s</string>
    <string name="filter">Filter</string>
    <string name="compo">Composable</string>
    <string name="handpainted">Handpainted</string>
    <string name="cannot_oper_filters">No elements to be filtered</string>
    <string name="other">Other</string>
    <string name="north_america">North America</string>
    <string name="south_america">South America</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="australia">Australia</string>
    <string name="everywhere">World wide</string>
    <string name="add_in_collection_title">Add in collection</string>
    <string name="add_in_collection_message">If you want to add %s to your missing list, you must add the set %s in your collection.</string>
    <string name="add_btn">Add</string>
    <string name="discard_btn">Discard</string>
    <string name="remove_from_collection_title">Remove from collection</string>
    <string name="remove_from_collection_message">By removing a set from your collection, you will remove its items from your missing list.</string>
    <string name="proceed_btn">Proceed</string>
    <string name="add_to_doubles">Doubles</string>
    <string name="add_to_missings">Missings</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="category">Category</string>
    <string name="producer">Producer</string>
    <string name="reset_btn">Reset</string>
    <string name="set_completion">Set completion</string>
    <string name="search_between">Search between:</string>
    <string name="user_icon">User icon</string>
</resources>