<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_category_theme">
        <SwitchPreferenceCompat
            app:key="@string/settings_night_mode_key"
            app:title="@string/settings_night_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="User">
        <Preference
            app:key="@string/settings_change_password_key"
            app:title="@string/change_password"/>
        <Preference
            app:key="@string/settings_change_country_key"
            app:title="@string/change_country"/>
        <Preference
            app:key="@string/settings_logout_key"
            app:title="@string/logout"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_links">
        <Preference
            app:key="@string/settings_contact_us_key"
            app:summary="@string/settings_contact_us_summary"
            app:title="@string/settings_contact_us_title" />
        <Preference app:title="@string/privacy_policy"
            app:key="@string/settings_privacy_key"/>
        <Preference
            app:key="@string/settings_delete_user_key"
            app:title="@string/delete_account"
            app:summary="@string/settings_delete_user_summary"/>
    </PreferenceCategory>
</PreferenceScreen>

