<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/edt_dialog_old_pwd"
        style="@style/DialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="20dp"
        android:drawableTint="@color/signUpIcon"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_dialog_new_pwd"
        style="@style/DialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_key"
        android:drawablePadding="20dp"
        android:drawableTint="@color/signUpIcon"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dialog_submit"
        style="@style/TextAppearance.Surprix.ButtonPlain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/change_password"
        android:textColor="@color/btnImportantText" />
</LinearLayout>