<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mainfragments.catalog.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarColor"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false" />

        <TextView
            style="@style/TextAppearance.Surprix.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_between"
            android:textColor="@color/white" />

        <RadioGroup
            android:id="@+id/search_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/search_radio_surprise"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/search_radio_surprise"
                style="@style/TextAppearance.Surprix.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/radio_btn_white_tint"
                android:text="@string/surprises"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/search_radio_sets"
                style="@style/TextAppearance.Surprix.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:buttonTint="@color/radio_btn_white_tint"
                android:text="@string/sets"
                android:textColor="@color/white" />
        </RadioGroup>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>